# xy-assistant

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  API_DOCUMENTATION.md  DEPLOYMENT_PACKAGE.md  DOCKER_DEPLOYMENT.md  Dockerfile  FrontEnd.md  LLM_UPGRADE_PLAN.md  MSG_REPLY_TODO.md  PROJECT_CONTEXT.md  README.md  TODO.md  command_intent_mapping.csv  deploy.sh  deployment-notes.md  docker-compose.yml  order.csv  order_fuzzy.csv  order_fuzzy_results.csv  order_with_results.csv  pyproject.toml
academic/: research_notes.md
academic/app/: main.py
app/: main.py
app/core/: config.py
data/: intent_dataset_v1.jsonl  intent_dataset_v2.jsonl  intent_templates.yaml
deploy/: server-deploy.sh
flowchart/: .$multi_turn_clarification.drawio.bkp  .$single_turn_intent.drawio.bkp  .$system_architecture.drawio.bkp  .$unknown_or_fallback.drawio.bkp  README.md  multi_turn_clarification.drawio  multi_turn_clarification.md  single_turn_intent.drawio  single_turn_intent.md  system_architecture.drawio  unknown_or_fallback.drawio  unknown_or_fallback.md
nginx/: nginx.conf
tests/: test_api.py  test_end_to_end.py  test_high_confidence_rule_engine.py  test_intent_classifier.py  test_intent_rules.py  test_intent_rules_subject.py  test_llm_client.py  test_time_utils.py  test_time_utils_dates.py  test_weather_service.py
tools/: audit_intent_dataset.py  generate_intent_dataset.py  measure_doubao_latency.py  run_fuzzy_tests.py  run_order_tests.py  test_stream_full_report.py  test_stream_report.py
visualizer/: README.md  package-lock.json  package.json  tailwind.config.js
(+49 files in other folders)
