[project]
name = "xy-assistant"
version = "0.1.0"
description = "API service for semantic command analysis"
authors = [{ name = "AI Assistant" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
    "dateparser>=1.2",
    "lunar-python>=1.0",
    "cachetools>=5.3",
    "pydantic>=2.6",
    "loguru>=0.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
